# potencent

./: .gitignore  README.md  setup.cfg
docs/: python识别发票 1行代码搞定.xmind
examples/: BankCardOCR.py  IDCardOCR.py
potencent/: __init__.py
potencent/api/: __init__.py  ocr.py
potencent/core/: OCR.py  __init__.py
potencent/lib/: CONST.py  CommonUtils.py  Config.py  Const.py
tests/: __init__.py  test_tencent.py
