[metadata]
name = potencent
version = 0.0.1
description = pip install potencent
long_description = file: README.md
long_description_content_type = text/markdown
url = http://python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/potencent/issues
    Documentation = https://github.com/CoderWanFeng/potencent/blob/main/README.md
    Source Code = https://github.com/CoderWanFeng/potencent

[options]
packages = find:
install_requires =
    baidu-aip
    toml
    charset_normalizer

python_requires = >=3.7
include_package_data = True
zip_safe = False

